objects/DraftEmailMessage__c.object
<CustomObject>
    <fields>
        <fullName>BccAddress__c</fullName>
        <label>Bcc Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DraftEmailMessage</relationshipLabel>
        <relationshipName>DraftEmailMessage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CcAddress__c</fullName>
        <label>Cc Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTemplate_Type__c</fullName>
        <label>EmailTemplate Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <description>Default email template for Email Composer component</description>
        <inlineHelpText>Default email template for Email Composer component</inlineHelpText>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FutureCaseStatus__c</fullName>
        <label>Future Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HtmlBody__c</fullName>
        <label>Html Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Thread__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Thread</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldCaseStatus__c</fullName>
        <label>Old Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextBody__c</fullName>
        <label>Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToAddress__c</fullName>
        <label>To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Draft Email Message</label>
    <nameField>
        <label>DraftEmailMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DraftEmailMessage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>